--- a/stylesheet4b.css
+++ b/stylesheet4b.css
@@ -84,7 +84,12 @@ img {
 
 	 	text-align: center ; 
 	 }
-
+	
+    img {
+    max-width: 100%;
+    max-height: 42em;
+    height:auto;
+}
 
 
 	#innercontent {
