--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -434,19 +434,31 @@
   }
   
   /* ---- .grid-item ---- */
-  
   .grid-item {
     float: left;
-    width: 200px;
-    height: 200px;
+    width: 100px;
+    height: 100px;
     background: #F8F8FF;
     border: 2px solid hsla(0, 0%, 0%, 0.5);
     overflow: hidden;
   }
   
-  .grid-item--width2 { width: 400px; }
-  .grid-item--height2 { height: 400px; }
-  
+  .grid-item--width2 { width: 200px; }
+  .grid-item--height2 { height: 200px; }
+  @media (min-width: 400px) {
+    .grid-item {
+        float: left;
+        width: 200px;
+        height: 200px;
+        background: #F8F8FF;
+        border: 2px solid hsla(0, 0%, 0%, 0.5);
+        overflow: hidden;
+      }
+      
+      .grid-item--width2 { width: 400px; }
+      .grid-item--height2 { height: 400px; }
+      
+  }
   .grid-item:hover {
     border-color: hsla(0, 0%, 100%, 0.5);
     cursor: move;
@@ -491,10 +503,14 @@
     color: white;
   }
   
-  
+@media (min-width: 400px) {
+    .text {
+    font-size: small;
+    }
+}
   
   .text {
-    font-size: small;
+    font-size: xx-small;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -503,7 +519,17 @@
     transform: translate(-50%, -50%);
     text-align: center;
   }
-  
+  @media (min-width: 400px) {
+    .text {
+    font-size: small;
+    }
+}
+  @media (max-width: 400px) {
+    body {
+      font-size: xx-small;
+    }
+    
+  }
   .project-item a {
     color: #222;
   }
@@ -511,3 +537,4 @@
   .project-item:hover a {
     color: #F8F8FF;
   }
+
